# EZ-Language

./: .ezconfig  .ezconfig.example  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
examples/: functions.ez
examples/basic_syntax/: hello_world.ez  variables.ez
grammar/: EZLanguage.g4
scripts/: compare_backends.sh  run_tests.sh  run_tests_no_env.sh
src/: main.cpp
src/codegen/: codegen_c.cpp
src/config/: config.cpp  config.h  nix_env.cpp  nix_env.h
src/core/: friend_translation.cpp  friend_translation.h  interpreter.cpp  interpreter.h  semantic.cpp  types.h
src/diagnostics/: diagnostics.cpp  diagnostics.h
src/frontend/: lexer.cpp
tests/: float_math.cpp  native_math.cpp  test_assignments.ez  test_break_continue.ez  test_codegen_advanced.ez  test_codegen_simple.ez  test_comprehensive_control_flow.ez  test_float_friends.ez  test_floats.ez  test_for_loop.ez  test_friend_bool_translation.ez  test_friend_many_args.ez  test_friend_signature_conflict.ez  test_friend_too_many_args.ez  test_if_else_chain.ez  test_if_statement.ez  test_negative_numbers.ez  test_while_loop.ez
tests/expected_outputs/: test_friend_signature_conflict.ez.err_contains  test_friend_too_many_args.ez.err_contains
tools/: builder.py
wiki/: CLI-Reference.md  Configuration.md  Diagnostics.md  Grammar-Reference.md  Nix-Environments.md
